--- a/MobileProject2021/package.json
+++ b/MobileProject2021/package.json
@@ -16,10 +16,14 @@
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
+    "expo-notifications": "^0.14.0",
     "expo-status-bar": "~1.1.0",
+    "i": "^0.3.7",
+    "npm": "^8.3.0",
     "react": "^17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-image-picker": "^4.6.0",
     "react-native-navigation": "^7.24.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.8.0",
@@ -30,6 +34,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "expo-image-picker": "^12.0.1",
     "typescript": "~4.3.5"
   },
   "private": true
